# medusa

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: clippy.yml  docker-image.yml  tests.yml
compose/driplane/: config.yml
compose/driplane/rules.d/: medusa.rule
compose/medusa/: medusa-https.crt  medusa-https.key
compose/medusa/services.d/: dns-tcp-53.yml  dns-udp-53.yml  ftp-21.yml  http-80.yml  https-443.yml  ics-5900.yml  ikettle-2000.yml  mikrotik-routeros-8291.yml  rdp-3389.yml  realvnc-5800.yml  rtsp-tcp-554.yml  ssh-22.yml  telnet-23.yml
src/: capture.rs  command.rs  config.rs  main.rs  record.rs  replay.rs  services.rs
src/protocols/: mod.rs
src/protocols/http/: config.rs  handler.rs  mod.rs  server.rs
src/protocols/ssh/: config.rs  handler.rs  server.rs
src/protocols/tcp/: handler.rs  server.rs
src/protocols/telnet/: config.rs  handler.rs  server.rs
src/protocols/udp/: config.rs  mod.rs  server.rs
src/shell/: docker.rs  handler.rs  mod.rs
src/shodan/: mod.rs  templates.rs
