[package]
name = "medusa"
version = "0.1.0"
authors = ["Simone Margaritelli <evilsocket@gmail.com>"]
edition = "2018"
description = "Medusa - A fast and secure multi protocol honeypot."
license = "GPL-3.0"
repository = "https://github.com/evilsocket/medusa"
# documentation = "https://docs.rs/medusa/"
readme = "README.md"
keywords = [
	"honeypot",
	"security",
	"telnet",
	"ssh",
	"http",
	"iot",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["packet_capture"]
packet_capture = ["pcap"]

[dependencies]
anyhow = "1.0.43"
async-trait = "0.1.51"
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
env_logger = "0.9.0"
futures = "0.3.16"
gethostname = "0.2.1"
glob = "0.3.0"
hex-slice = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
reqwest = { version = "0.11.4", features = ["json"] }
russh = { version = "0.34.0-beta.15", features = ["openssl"] }
russh-keys = { version = "0.22.0-beta.6", features = ["openssl"] }
serde = { version = "1.0.129", features = ["derive"] }
serde_json = "1.0.66"
serde_yaml = "0.8.20"
tokio = { version = "1.10.1", features = ["full"] }
tokio-rustls = "0.22.0"

pcap = { version = "0.10.1", optional = true }

